--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,25 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#d8856b",
-        "activityBar.background": "#d8856b",
+        "activityBar.activeBackground": "#fe9e68",
+        "activityBar.background": "#fe9e68",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#b3ebc1",
-        "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#d8856b",
-        "statusBar.background": "#cd6443",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#d8856b",
-        "statusBarItem.remoteBackground": "#cd6443",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#cd6443",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#cd644399",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "activityBarBadge.background": "#017f2e",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#fe9e68",
+        "statusBar.background": "#fe7e35",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#fe5e02",
+        "statusBarItem.remoteBackground": "#fe7e35",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#fe7e35",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#fe7e3599",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.remoteColor": "#cd6443"
+    "peacock.remoteColor": "#fe7e35",
+    "files.associations": {
+        "limits.h": "c"
+    }
 }
